tests/pass/top_level_var_decl.kr
nter dez = 10;

fn inisiu() {
    mostra(dez);
}