tests/fail/fail_string_cmp.kr
fn inisiu() {
    si "yo" {
        mostra("Hey");
    }
}